--- a/static/css/index.css
+++ b/static/css/index.css
@@ -322,3 +322,10 @@ body {
   width: 2100%;
   max-width: none !important;
 }
+
+
+table img.rounded-corners {
+  padding: 10px;
+  border-radius: 20px;
+}
+
